tmux.conf: cleanup.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,11 +22,11 @@ bind -r l select-pane -R
 #set -g status-keys vi
 setw -g mode-keys vi
 
-# quit q 
+# quit q
 unbind q
 bind q kill-server
 
-# kill K k 
+# kill K k
 unbind K
 bind K kill-window
 unbind C-k
@@ -53,6 +53,5 @@ set -g base-index 1
 
 # default session
 new
-neww -t:0 htop
-last
+#last
 
